manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taylor-cit270
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taylor-cit270
  template:
    metadata:
      labels:
        app: taylor-cit270
    spec:
      containers:
        - name: taylor-cit270
          image: axxes8/cit270
          command: ["npm"]
          args: ["run","start"]
          ports:
            - containerPort: 443
          resources:
            limits:
              cpu: ".125"
              memory: "500Mi"
            requests:
              cpu: ".1"
              memory: "250Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: taylor-cit270-loadbalancer
spec:
  selector:
    app: taylor-cit270
  type: LoadBalancer
  ports:
    - port: 80
    targetPort: 3000
